--- a/MoversEditor/MainForm.fr.resx
+++ b/MoversEditor/MainForm.fr.resx
@@ -613,14 +613,14 @@
   <data name="msMain.ToolTip" xml:space="preserve">
     <value />
   </data>
-  <data name="tsmiMoverDelete.Size" type="System.Drawing.Size, System.Drawing">
-    <value>129, 22</value>
-  </data>
   <data name="tsmiMoverDelete.Text" xml:space="preserve">
     <value>Supprimer</value>
   </data>
+  <data name="tsmiMoverDuplicate.Text" xml:space="preserve">
+    <value>Dupliquer</value>
+  </data>
   <data name="cmsLbMovers.Size" type="System.Drawing.Size, System.Drawing">
-    <value>130, 26</value>
+    <value>181, 70</value>
   </data>
   <data name="cmsLbMovers.ToolTip" xml:space="preserve">
     <value />
