--- a/MoversEditor/Resources/ExceptionMessages.fr.resx
+++ b/MoversEditor/Resources/ExceptionMessages.fr.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="IncorrectlyFormattedFile" xml:space="preserve">
-    <value>Le fichier "{0}" est mal formaté. Vérifiez la version dans les paramètres.</value>
+    <value>Le fichier "{0}" est mal formaté. Vérifiez la version dans les paramètres</value>
   </data>
   <data name="LoadingError" xml:space="preserve">
     <value>Erreur de chargement</value>
